# libpinyin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/compat/: compat.h  getline.h
src/storage/: CMakeLists.txt
tests/: CMakeLists.txt
tests/compat/: .clang-format  test_utf8_init.cpp
